freshed-rs-macros/tests/ui/fail/component_children_conflict_html_async.stderr
error: children provided both as prop and as child nodes
  --> tests/ui/fail/component_children_conflict_html_async.rs:14:32
   |
14 |     let _ = html_async!(<Panel children={text}>{"body"}</Panel>);
   |                                ^^^^^^^^
